--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@metafoks/openai",
-  "version": "1.0.0",
-  "description": "Metafoks telegram bot extension",
+  "version": "1.0.1",
+  "description": "Metafoks openai extension",
   "main": "lib/index.js",
   "files": [
     "lib"
