--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "@metafoks/app": "^1.0.13",
     "@metafoks/utils": "^1.0.0",
     "node-fetch": "^3.3.2",
-    "openai": "^4.26.0"
+    "openai": "^4.26.0",
+    "tiktoken": "^1.0.13"
   },
   "jest": {
     "collectCoverage": true,
